2005-09-02  Sebastien Couret <sebastien.couret@elios-informatique.fr>

	* src/sys/kern/kern_sysctl.c: Silent compiler warning on lvalue
	assignment

2005-07-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/netinet/ip_output.c (ip_output): initialize len to 0.
	* src/sys/net/if.c (ifioctl): Cast to keep compiler happy.
	* src/ecos/support.c (_mask): Use the correct cast to keep the
	compiler happy.
	* include/sys/param.h: give proc0 the correct type so we don't
	have to cast it and avoid a compiler warning.
	* src/sys/kern/uipc_socket.c (soopt_mcopyout): Lefthand casts no
	longer allowed with gcc4. 
	* src/sys/net/if_ethersubr.c (ether_resolvemulti): Cast to keep
	compiler happy.
	* src/sys/net/rtsock.c: Define routedomain consistently to avoid
	compiler warnings.
	
2005-06-23  Gary Thomas  <gary@mlbassoc.com>

	* include/netinet/if_ether.h: Adjust size of struct sockaddr_inarp
	which needs to match struct sockaddr.  This was broken when IPv6
	was added and without this change, ARP can get confused.  Tracked
	down by Arnaud Chataignier <achataignier@neotion.com>

2005-06-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/kern/uipc_socket.c (sodealloc): Fixed a race condition
	when freeing the socket memory. Problem reported by Will Lent.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/net/if.c (ifioctl): Fixed a compiler warning about 
	types to printf.
	* src/sys/netinet/if_ether.c (in_arpinput): Ditto
	* src/sys/net/if.c: Ditto

2005-03-10	Matt Jerdonek	<maj1224@yahoo.com>

	* cdl/freebsd_net.cdl:
	* src/sys/netinet/in_pcb.c: add option to randomly pick
	source port.  This option is useful when connecting
	through firewalls.

2004-12-24  Motoya Kurotsu  <kurotsu@allied-telesis.co.jp>

	* src/sys/kern/kern_sysctl.c: set mutex_init to one to prevent
	mutex being initialized multiple times.
	
2004-08-18  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (show_net_times): Removed stats_in_cksum.